correct copyright, maintainer and vcs tags

--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,13 @@
 Source: ceph-deploy
-Maintainer: Sage Weil <sage@newdream.net>
-Uploaders: Sage Weil <sage@newdream.net>
+Maintainer: Scibian Project <packaging@scibian.org>
 Section: admin
 Priority: optional
 Build-Depends: debhelper (>= 7), python-setuptools, git
 X-Python-Version: >= 2.6
 Standards-Version: 3.9.2
 Homepage: http://ceph.com/
-Vcs-Git: git://github.com/ceph/ceph-deploy.git
-Vcs-Browser: https://github.com/ceph/ceph-deploy
+Vcs-Git: https://github.com/scibian/ceph-deploy.git
+Vcs-Browser: https://github.com/scibian/ceph-deploy
 
 Package: ceph-deploy
 Architecture: all
