--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
 export DEB_PYTHON_INSTALL_ARGS_ALL += --install-lib=/usr/share/ceph-deploy
+export CEPH_DEPLOY_NO_VENDOR=1
 
 %:
 	dh $@ --buildsystem python_distutils --with python2
